feat: modifica estado de ticket

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,12 @@
         android:theme="@style/Theme.SistemaDeTikets"
         tools:targetApi="31">
         <activity
+            android:name=".adminActivity.ActualizarDescripcionTicketActivity"
+            android:exported="false" />
+        <activity
+            android:name=".adminActivity.ActualizarDescipcionUserActivity"
+            android:exported="false" />
+        <activity
             android:name=".adminActivity.ContactosAdminActivity"
             android:exported="false" />
         <activity
